# pm-kun

./: .gitignore  README.md  pyproject.toml
src/pm_kun/: __init__.py  __main__.py  type_definition.py
src/pm_kun/pmgpt/: main.py
src/pm_kun/screen/: bord.py  chart.py  home.py  main.py  pmk.kv  pmk.py  task.py  unit.py
src/pm_kun/screen/component/: ticket.py  todo.py
src/pm_kun/screen/util/: create_view.py
src/pm_kun/task/: todo.py
