[project]
name = "pm-kun"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aoi-Takahashi", email = "xxx@xxx.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "pm_kun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pm_kun"]