[project]
name = "pm-kun"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aoi-Takahashi", email = "xxx@xxx.com" }
]
dependencies = [
    "transformers>=4.38.2",
    "kivy[base]>=2.3.0",
    "kivy_examples>=2.3.0",
    "matplotlib>=3.8.3",
    "pandas>=2.2.1",
    "openpyxl>=3.1.2",
    "mypy>=1.8.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "pm_kun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pm_kun"]

[tool.rye.scripts]
check = "mypy --strict src/pm_kun/__init__.py"