[project]
name = "pm-kun"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aoi-Takahashi", email = "xxx@xxx.com" }
]
dependencies = [
    "transformers>=4.38.2",
    "matplotlib>=3.8.3",
    "pandas>=2.2.1",
    "openpyxl>=3.1.2",
    "mypy>=1.8.0",
    "torch>=2.2.1",
    "torchvision>=0.17.1",
    "torchaudio>=2.2.1",
    "sentencepiece>=0.2.0",
    "flet>=0.21.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
start = "pm_kun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pm_kun"]

[tool.rye.scripts]
check = "mypy --strict src/pm_kun/__init__.py"
